--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html lang="en-us">
+<html lang="en">
 
-<head>
+    <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Horiseon</title>
-</head>
-
+    </head>
 <body>
-    <header>
-     <div class="header">
-        <h1>Hori<span class="seo">seo</span>n</h1>
-        <section>
-            <div>
+
+<header>
+    <h1>
+        Hori<span class="seo">seo</span>n
+    </h1>
+            <nav class="header">
                 <ul>
                     <li>
                         <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -24,10 +24,9 @@
                         <a href="#social-media-marketing">Social Media Marketing</a>
                     </li>
                 </ul>
-            </div>
-        </section>
+            </nav>
     </header>
-    </div>
+
     <div class="hero"></div>
     <div class="content">
         <div class="search-engine-optimization">
