--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!-- Services Section -->
     <main >
         <section id="search-engine-optimization" class="services">
-                <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="desk with computer and office supplies"/>
+                <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="a notebook depecting search engine optimization ideas on a desk with a laptop and officice supplies"/>
                 <h2>Search Engine Optimization</h2>
                  <p>
                     The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. 
@@ -44,7 +44,7 @@
         </section>
 
         <section id="online-reputation-management" class="services">
-                <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="computer showing results of a bar graph"/>
+                <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="a computer showing results of a bar graph and pie charts represeting growth results from using Horiseon services"/>
                 <h2>Online Reputation Management</h2>
                 <p>
                     The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. 
@@ -53,7 +53,7 @@
         </section>
 
         <section id="social-media-marketing" class="services">
-                <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="office employees conversing around a computer"/>
+                <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="office employees brinstorming around a around a computer discussing social media concepts"/>
                 <h2>Social Media Marketing</h2>
                 <p>
                     Social media continues to have a sizable influence on buying habits. 
@@ -67,26 +67,26 @@
         
         <section>
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />                
+            <img src="./assets/images/lead-generation.png" alt= "icon of a machine cog entering a funnel turning into currency" />                
             <p>
-                    Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
+            Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </section>
 
         <section>
-                <h3>Brand Awareness</h3>
-                <img src="./assets/images/brand-awareness.png" />
-                <p>
-                    Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
-                </p>
+            <h3>Brand Awareness</h3>
+            <img src="./assets/images/brand-awareness.png" alt= "icon of a man with a light bulb as ahead" />
+            <p>
+            Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
+            </p>
         </section>
 
         <section>
-                <h3>Cost Management</h3>
-                <img src="./assets/images/cost-management.png" />
-                <p>
-                    As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
-                </p>
+            <h3>Cost Management</h3>
+            <img src="./assets/images/cost-management.png" alt= "icon of machine cog surounded by"/>
+            <p>
+            As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
+            </p>
         </section>
         
     </aside>
