--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
         <section>
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" alt= "icon of machine cog surounded by"/>
+            <img src="./assets/images/cost-management.png" alt= "icon of machine cog surounded by currency"/>
             <p>
             As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
